src/parser/acomp.output
State 93 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: stmt statements
    3           | ε

    4 stmt: expr PUNC_SEMIC
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | KEYW_BREAK PUNC_SEMIC
   10     | KEYW_CONT PUNC_SEMIC
   11     | block
   12     | funcdef
   13     | PUNC_SEMIC

   14 expr: expr OPER_PLUS expr
   15     | expr OPER_MINUS expr
   16     | expr OPER_MUL expr
   17     | expr OPER_DIV expr
   18     | expr OPER_MOD expr
   19     | term
   20     | assignexpr

   21 boolexpr: boolexpr KEYW_AND savepos boolexpr
   22         | boolexpr KEYW_OR savepos boolexpr
   23         | expr OPER_GRT expr
   24         | expr OPER_GRE expr
   25         | expr OPER_LET expr
   26         | expr OPER_LEE expr
   27         | expr OPER_EQ2 expr
   28         | expr OPER_NEQ expr
   29         | KEYW_NOT boolexpr
   30         | expr

   31 term: PUNC_LPARENTH expr PUNC_RPARENTH
   32     | OPER_MINUS expr
   33     | OPER_PLUS2 lvalue
   34     | lvalue OPER_PLUS2
   35     | OPER_MINUS2 lvalue
   36     | lvalue OPER_MINUS2
   37     | primary

   38 assignexpr: lvalue OPER_EQ expr

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | PUNC_LPARENTH funcdef PUNC_RPARENTH
   43        | const

   44 lvalue: ID
   45       | KEYW_LOCAL ID
   46       | PUNC_COLON2 ID
   47       | member

   48 member: lvalue PUNC_DOT ID
   49       | lvalue PUNC_LBRACKET expr PUNC_RBRACKET
   50       | call PUNC_DOT ID
   51       | call PUNC_LBRACKET expr PUNC_RBRACKET

   52 call: call PUNC_LPARENTH elist PUNC_RPARENTH
   53     | lvalue callsuffix
   54     | PUNC_LPARENTH funcdef PUNC_RPARENTH PUNC_LPARENTH elist PUNC_RPARENTH

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: PUNC_LPARENTH elist PUNC_RPARENTH

   58 methodcall: PUNC_DOT2 ID PUNC_LPARENTH elist PUNC_RPARENTH

   59 elistrep: PUNC_COMMA expr elistrep
   60         | ε

   61 elist: expr elistrep
   62      | ε

   63 objectin: elist
   64         | indexed

   65 objectdef: PUNC_LBRACKET objectin PUNC_RBRACKET

   66 indexed: indexedelem indexrep

   67 indexedelem: PUNC_LBRACE expr PUNC_COLON expr PUNC_RBRACE

   68 indexrep: PUNC_COMMA indexedelem indexrep
   69         | ε

   70 blockprefix: PUNC_LBRACE

   71 block: blockprefix statements PUNC_RBRACE

   72 funcstart: ε

   73 funcend: ε

   74 funcname: ID
   75         | ε

   76 funcprefix: KEYW_FUNC funcname

   77 $@1: ε

   78 $@2: ε

   79 funcargs: PUNC_LPARENTH $@1 idlist $@2 PUNC_RPARENTH

   80 funcdef: funcprefix funcstart funcargs block funcend

   81 const: CONST_INT
   82      | CONST_REAL
   83      | STRING
   84      | KEYW_NIL
   85      | KEYW_TRUE
   86      | KEYW_FALSE

   87 idlist: ID ids
   88       | ε

   89 $@3: ε

   90 ids: PUNC_COMMA ID $@3 ids
   91    | ε

   92 ifprefix: KEYW_IF PUNC_LPARENTH boolexpr PUNC_RPARENTH

   93 ifstmt: ifprefix stmt
   94       | ifprefix stmt KEYW_ELSE jumpandsavepos stmt

   95 loopstart: ε

   96 loopend: ε

   97 whilestart: KEYW_WHILE

   98 whilecond: PUNC_LPARENTH boolexpr PUNC_RPARENTH

   99 whilestmt: whilestart loopstart whilecond stmt loopend

  100 jumpandsavepos: ε

  101 savepos: ε

  102 forprefix: KEYW_FOR loopstart PUNC_LPARENTH elist savepos PUNC_SEMIC boolexpr PUNC_SEMIC

  103 forstmt: forprefix jumpandsavepos elist PUNC_RPARENTH jumpandsavepos stmt jumpandsavepos loopend

  104 returnstmt: KEYW_RET PUNC_SEMIC
  105           | KEYW_RET expr PUNC_SEMIC


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OPER_EQ (258) 38
    OPER_PLUS (259) 14
    OPER_MINUS (260) 15 32
    OPER_MUL (261) 16
    OPER_DIV (262) 17
    OPER_MOD (263) 18
    OPER_EQ2 (264) 27
    OPER_NEQ (265) 28
    OPER_PLUS2 (266) 33 34
    OPER_MINUS2 (267) 35 36
    OPER_GRT (268) 23
    OPER_GRE (269) 24
    OPER_LET (270) 25
    OPER_LEE (271) 26
    PUNC_LBRACE (272) 67 70
    PUNC_RBRACE (273) 67 71
    PUNC_LBRACKET (274) 49 51 65
    PUNC_RBRACKET (275) 49 51 65
    PUNC_LPARENTH (276) 31 42 52 54 57 58 79 92 98 102
    PUNC_RPARENTH (277) 31 42 52 54 57 58 79 92 98 103
    PUNC_SEMIC (278) 4 9 10 13 102 104 105
    PUNC_COMMA (279) 59 68 90
    PUNC_COLON (280) 67
    PUNC_COLON2 (281) 46
    PUNC_DOT (282) 48 50
    PUNC_DOT2 (283) 58
    KEYW_IF (284) 92
    KEYW_ELSE (285) 94
    KEYW_WHILE (286) 97
    KEYW_FOR (287) 102
    KEYW_FUNC (288) 76
    KEYW_RET (289) 104 105
    KEYW_BREAK (290) 9
    KEYW_CONT (291) 10
    KEYW_AND (292) 21
    KEYW_NOT (293) 29
    KEYW_OR (294) 22
    KEYW_LOCAL (295) 45
    KEYW_TRUE (296) 85
    KEYW_FALSE (297) 86
    KEYW_NIL (298) 84
    CONST_INT <intVal> (299) 81
    CONST_REAL <realVal> (300) 82
    ID <strVal> (301) 44 45 46 48 50 58 74 87 90
    STRING <strVal> (302) 83
    UNARY_MINUS (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    statements <stmtcont> (51)
        on left: 2 3
        on right: 1 2 71
    stmt <stmtcont> (52)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 93 94 99 103
    expr <expression> (53)
        on left: 14 15 16 17 18 19 20
        on right: 4 14 15 16 17 18 23 24 25 26 27 28 30 31 32 38 49 51 59 61 67 105
    boolexpr <expression> (54)
        on left: 21 22 23 24 25 26 27 28 29 30
        on right: 21 22 29 92 98 102
    term <expression> (55)
        on left: 31 32 33 34 35 36 37
        on right: 19
    assignexpr <expression> (56)
        on left: 38
        on right: 20
    primary <expression> (57)
        on left: 39 40 41 42 43
        on right: 37
    lvalue <expression> (58)
        on left: 44 45 46 47
        on right: 33 34 35 36 38 39 48 49 53
    member <expression> (59)
        on left: 48 49 50 51
        on right: 47
    call <expression> (60)
        on left: 52 53 54
        on right: 40 50 51 52
    callsuffix <functcont> (61)
        on left: 55 56
        on right: 53
    normcall <functcont> (62)
        on left: 57
        on right: 55
    methodcall <functcont> (63)
        on left: 58
        on right: 56
    elistrep <expression> (64)
        on left: 59 60
        on right: 59 61
    elist <expression> (65)
        on left: 61 62
        on right: 52 54 57 58 63 102 103
    objectin <expression> (66)
        on left: 63 64
        on right: 65
    objectdef <expression> (67)
        on left: 65
        on right: 41
    indexed <expression> (68)
        on left: 66
        on right: 64
    indexedelem <expression> (69)
        on left: 67
        on right: 66 68
    indexrep <expression> (70)
        on left: 68 69
        on right: 66 68
    blockprefix (71)
        on left: 70
        on right: 71
    block <stmtcont> (72)
        on left: 71
        on right: 11 80
    funcstart (73)
        on left: 72
        on right: 80
    funcend (74)
        on left: 73
        on right: 80
    funcname <strVal> (75)
        on left: 74 75
        on right: 76
    funcprefix <symbol> (76)
        on left: 76
        on right: 80
    funcargs (77)
        on left: 79
        on right: 80
    $@1 (78)
        on left: 77
        on right: 79
    $@2 (79)
        on left: 78
        on right: 79
    funcdef <symbol> (80)
        on left: 80
        on right: 12 42 54
    const <expression> (81)
        on left: 81 82 83 84 85 86
        on right: 43
    idlist (82)
        on left: 87 88
        on right: 79
    ids (83)
        on left: 90 91
        on right: 87 90
    $@3 (84)
        on left: 89
        on right: 90
    ifprefix <intVal> (85)
        on left: 92
        on right: 93 94
    ifstmt (86)
        on left: 93 94
        on right: 5
    loopstart (87)
        on left: 95
        on right: 99 102
    loopend (88)
        on left: 96
        on right: 99 103
    whilestart <intVal> (89)
        on left: 97
        on right: 99
    whilecond <intVal> (90)
        on left: 98
        on right: 99
    whilestmt (91)
        on left: 99
        on right: 6
    jumpandsavepos <intVal> (92)
        on left: 100
        on right: 94 103
    savepos <intVal> (93)
        on left: 101
        on right: 21 22 102
    forprefix <forcont> (94)
        on left: 102
        on right: 103
    forstmt (95)
        on left: 103
        on right: 7
    returnstmt (96)
        on left: 104 105
        on right: 8


State 0

    0 $accept: • program $end

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACE    shift, and go to state 4
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_SEMIC     shift, and go to state 7
    PUNC_COLON2    shift, and go to state 8
    KEYW_IF        shift, and go to state 9
    KEYW_WHILE     shift, and go to state 10
    KEYW_FOR       shift, and go to state 11
    KEYW_FUNC      shift, and go to state 12
    KEYW_RET       shift, and go to state 13
    KEYW_BREAK     shift, and go to state 14
    KEYW_CONT      shift, and go to state 15
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    $default  reduce using rule 3 (statements)

    program      go to state 24
    statements   go to state 25
    stmt         go to state 26
    expr         go to state 27
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    objectdef    go to state 34
    blockprefix  go to state 35
    block        go to state 36
    funcprefix   go to state 37
    funcdef      go to state 38
    const        go to state 39
    ifprefix     go to state 40
    ifstmt       go to state 41
    whilestart   go to state 42
    whilestmt    go to state 43
    forprefix    go to state 44
    forstmt      go to state 45
    returnstmt   go to state 46


State 1

   32 term: OPER_MINUS • expr

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    expr        go to state 47
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 2

   33 term: OPER_PLUS2 • lvalue

    PUNC_LPARENTH  shift, and go to state 48
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    ID             shift, and go to state 22

    lvalue  go to state 49
    member  go to state 32
    call    go to state 50


State 3

   35 term: OPER_MINUS2 • lvalue

    PUNC_LPARENTH  shift, and go to state 48
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    ID             shift, and go to state 22

    lvalue  go to state 51
    member  go to state 32
    call    go to state 50


State 4

   70 blockprefix: PUNC_LBRACE •

    $default  reduce using rule 70 (blockprefix)


State 5

   65 objectdef: PUNC_LBRACKET • objectin PUNC_RBRACKET

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACE    shift, and go to state 52
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    $default  reduce using rule 62 (elist)

    expr         go to state 53
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    elist        go to state 54
    objectin     go to state 55
    objectdef    go to state 34
    indexed      go to state 56
    indexedelem  go to state 57
    const        go to state 39


State 6

   31 term: PUNC_LPARENTH • expr PUNC_RPARENTH
   42 primary: PUNC_LPARENTH • funcdef PUNC_RPARENTH
   54 call: PUNC_LPARENTH • funcdef PUNC_RPARENTH PUNC_LPARENTH elist PUNC_RPARENTH

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_COLON2    shift, and go to state 8
    KEYW_FUNC      shift, and go to state 12
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    expr        go to state 58
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    funcprefix  go to state 37
    funcdef     go to state 59
    const       go to state 39


State 7

   13 stmt: PUNC_SEMIC •

    $default  reduce using rule 13 (stmt)


State 8

   46 lvalue: PUNC_COLON2 • ID

    ID  shift, and go to state 60


State 9

   92 ifprefix: KEYW_IF • PUNC_LPARENTH boolexpr PUNC_RPARENTH

    PUNC_LPARENTH  shift, and go to state 61


State 10

   97 whilestart: KEYW_WHILE •

    $default  reduce using rule 97 (whilestart)


State 11

  102 forprefix: KEYW_FOR • loopstart PUNC_LPARENTH elist savepos PUNC_SEMIC boolexpr PUNC_SEMIC

    $default  reduce using rule 95 (loopstart)

    loopstart  go to state 62


State 12

   76 funcprefix: KEYW_FUNC • funcname

    ID  shift, and go to state 63

    $default  reduce using rule 75 (funcname)

    funcname  go to state 64


State 13

  104 returnstmt: KEYW_RET • PUNC_SEMIC
  105           | KEYW_RET • expr PUNC_SEMIC

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_SEMIC     shift, and go to state 65
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    expr        go to state 66
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 14

    9 stmt: KEYW_BREAK • PUNC_SEMIC

    PUNC_SEMIC  shift, and go to state 67


State 15

   10 stmt: KEYW_CONT • PUNC_SEMIC

    PUNC_SEMIC  shift, and go to state 68


State 16

   45 lvalue: KEYW_LOCAL • ID

    ID  shift, and go to state 69


State 17

   85 const: KEYW_TRUE •

    $default  reduce using rule 85 (const)


State 18

   86 const: KEYW_FALSE •

    $default  reduce using rule 86 (const)


State 19

   84 const: KEYW_NIL •

    $default  reduce using rule 84 (const)


State 20

   81 const: CONST_INT •

    $default  reduce using rule 81 (const)


State 21

   82 const: CONST_REAL •

    $default  reduce using rule 82 (const)


State 22

   44 lvalue: ID •

    $default  reduce using rule 44 (lvalue)


State 23

   83 const: STRING •

    $default  reduce using rule 83 (const)


State 24

    0 $accept: program • $end

    $end  shift, and go to state 70


State 25

    1 program: statements •

    $default  reduce using rule 1 (program)


State 26

    2 statements: stmt • statements

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACE    shift, and go to state 4
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_SEMIC     shift, and go to state 7
    PUNC_COLON2    shift, and go to state 8
    KEYW_IF        shift, and go to state 9
    KEYW_WHILE     shift, and go to state 10
    KEYW_FOR       shift, and go to state 11
    KEYW_FUNC      shift, and go to state 12
    KEYW_RET       shift, and go to state 13
    KEYW_BREAK     shift, and go to state 14
    KEYW_CONT      shift, and go to state 15
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    $default  reduce using rule 3 (statements)

    statements   go to state 71
    stmt         go to state 26
    expr         go to state 27
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    objectdef    go to state 34
    blockprefix  go to state 35
    block        go to state 36
    funcprefix   go to state 37
    funcdef      go to state 38
    const        go to state 39
    ifprefix     go to state 40
    ifstmt       go to state 41
    whilestart   go to state 42
    whilestmt    go to state 43
    forprefix    go to state 44
    forstmt      go to state 45
    returnstmt   go to state 46


State 27

    4 stmt: expr • PUNC_SEMIC
   14 expr: expr • OPER_PLUS expr
   15     | expr • OPER_MINUS expr
   16     | expr • OPER_MUL expr
   17     | expr • OPER_DIV expr
   18     | expr • OPER_MOD expr

    OPER_PLUS   shift, and go to state 72
    OPER_MINUS  shift, and go to state 73
    OPER_MUL    shift, and go to state 74
    OPER_DIV    shift, and go to state 75
    OPER_MOD    shift, and go to state 76
    PUNC_SEMIC  shift, and go to state 77


State 28

   19 expr: term •

    $default  reduce using rule 19 (expr)


State 29

   20 expr: assignexpr •

    $default  reduce using rule 20 (expr)


State 30

   37 term: primary •

    $default  reduce using rule 37 (term)


State 31

   34 term: lvalue • OPER_PLUS2
   36     | lvalue • OPER_MINUS2
   38 assignexpr: lvalue • OPER_EQ expr
   39 primary: lvalue •
   48 member: lvalue • PUNC_DOT ID
   49       | lvalue • PUNC_LBRACKET expr PUNC_RBRACKET
   53 call: lvalue • callsuffix

    OPER_EQ        shift, and go to state 78
    OPER_PLUS2     shift, and go to state 79
    OPER_MINUS2    shift, and go to state 80
    PUNC_LBRACKET  shift, and go to state 81
    PUNC_LPARENTH  shift, and go to state 82
    PUNC_DOT       shift, and go to state 83
    PUNC_DOT2      shift, and go to state 84

    $default  reduce using rule 39 (primary)

    callsuffix  go to state 85
    normcall    go to state 86
    methodcall  go to state 87


State 32

   47 lvalue: member •

    $default  reduce using rule 47 (lvalue)


State 33

   40 primary: call •
   50 member: call • PUNC_DOT ID
   51       | call • PUNC_LBRACKET expr PUNC_RBRACKET
   52 call: call • PUNC_LPARENTH elist PUNC_RPARENTH

    PUNC_LBRACKET  shift, and go to state 88
    PUNC_LPARENTH  shift, and go to state 89
    PUNC_DOT       shift, and go to state 90

    $default  reduce using rule 40 (primary)


State 34

   41 primary: objectdef •

    $default  reduce using rule 41 (primary)


State 35

   71 block: blockprefix • statements PUNC_RBRACE

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACE    shift, and go to state 4
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_SEMIC     shift, and go to state 7
    PUNC_COLON2    shift, and go to state 8
    KEYW_IF        shift, and go to state 9
    KEYW_WHILE     shift, and go to state 10
    KEYW_FOR       shift, and go to state 11
    KEYW_FUNC      shift, and go to state 12
    KEYW_RET       shift, and go to state 13
    KEYW_BREAK     shift, and go to state 14
    KEYW_CONT      shift, and go to state 15
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    $default  reduce using rule 3 (statements)

    statements   go to state 91
    stmt         go to state 26
    expr         go to state 27
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    objectdef    go to state 34
    blockprefix  go to state 35
    block        go to state 36
    funcprefix   go to state 37
    funcdef      go to state 38
    const        go to state 39
    ifprefix     go to state 40
    ifstmt       go to state 41
    whilestart   go to state 42
    whilestmt    go to state 43
    forprefix    go to state 44
    forstmt      go to state 45
    returnstmt   go to state 46


State 36

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 37

   80 funcdef: funcprefix • funcstart funcargs block funcend

    $default  reduce using rule 72 (funcstart)

    funcstart  go to state 92


State 38

   12 stmt: funcdef •

    $default  reduce using rule 12 (stmt)


State 39

   43 primary: const •

    $default  reduce using rule 43 (primary)


State 40

   93 ifstmt: ifprefix • stmt
   94       | ifprefix • stmt KEYW_ELSE jumpandsavepos stmt

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACE    shift, and go to state 4
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_SEMIC     shift, and go to state 7
    PUNC_COLON2    shift, and go to state 8
    KEYW_IF        shift, and go to state 9
    KEYW_WHILE     shift, and go to state 10
    KEYW_FOR       shift, and go to state 11
    KEYW_FUNC      shift, and go to state 12
    KEYW_RET       shift, and go to state 13
    KEYW_BREAK     shift, and go to state 14
    KEYW_CONT      shift, and go to state 15
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    stmt         go to state 93
    expr         go to state 27
    term         go to state 28
    assignexpr   go to state 29
    primary      go to state 30
    lvalue       go to state 31
    member       go to state 32
    call         go to state 33
    objectdef    go to state 34
    blockprefix  go to state 35
    block        go to state 36
    funcprefix   go to state 37
    funcdef      go to state 38
    const        go to state 39
    ifprefix     go to state 40
    ifstmt       go to state 41
    whilestart   go to state 42
    whilestmt    go to state 43
    forprefix    go to state 44
    forstmt      go to state 45
    returnstmt   go to state 46


State 41

    5 stmt: ifstmt •

    $default  reduce using rule 5 (stmt)


State 42

   99 whilestmt: whilestart • loopstart whilecond stmt loopend

    $default  reduce using rule 95 (loopstart)

    loopstart  go to state 94


State 43

    6 stmt: whilestmt •

    $default  reduce using rule 6 (stmt)


State 44

  103 forstmt: forprefix • jumpandsavepos elist PUNC_RPARENTH jumpandsavepos stmt jumpandsavepos loopend

    $default  reduce using rule 100 (jumpandsavepos)

    jumpandsavepos  go to state 95


State 45

    7 stmt: forstmt •

    $default  reduce using rule 7 (stmt)


State 46

    8 stmt: returnstmt •

    $default  reduce using rule 8 (stmt)


State 47

   14 expr: expr • OPER_PLUS expr
   15     | expr • OPER_MINUS expr
   16     | expr • OPER_MUL expr
   17     | expr • OPER_DIV expr
   18     | expr • OPER_MOD expr
   32 term: OPER_MINUS expr •

    $default  reduce using rule 32 (term)


State 48

   54 call: PUNC_LPARENTH • funcdef PUNC_RPARENTH PUNC_LPARENTH elist PUNC_RPARENTH

    KEYW_FUNC  shift, and go to state 12

    funcprefix  go to state 37
    funcdef     go to state 96


State 49

   33 term: OPER_PLUS2 lvalue •
   48 member: lvalue • PUNC_DOT ID
   49       | lvalue • PUNC_LBRACKET expr PUNC_RBRACKET
   53 call: lvalue • callsuffix

    PUNC_LBRACKET  shift, and go to state 81
    PUNC_LPARENTH  shift, and go to state 82
    PUNC_DOT       shift, and go to state 83
    PUNC_DOT2      shift, and go to state 84

    $default  reduce using rule 33 (term)

    callsuffix  go to state 85
    normcall    go to state 86
    methodcall  go to state 87


State 50

   50 member: call • PUNC_DOT ID
   51       | call • PUNC_LBRACKET expr PUNC_RBRACKET
   52 call: call • PUNC_LPARENTH elist PUNC_RPARENTH

    PUNC_LBRACKET  shift, and go to state 88
    PUNC_LPARENTH  shift, and go to state 89
    PUNC_DOT       shift, and go to state 90


State 51

   35 term: OPER_MINUS2 lvalue •
   48 member: lvalue • PUNC_DOT ID
   49       | lvalue • PUNC_LBRACKET expr PUNC_RBRACKET
   53 call: lvalue • callsuffix

    PUNC_LBRACKET  shift, and go to state 81
    PUNC_LPARENTH  shift, and go to state 82
    PUNC_DOT       shift, and go to state 83
    PUNC_DOT2      shift, and go to state 84

    $default  reduce using rule 35 (term)

    callsuffix  go to state 85
    normcall    go to state 86
    methodcall  go to state 87


State 52

   67 indexedelem: PUNC_LBRACE • expr PUNC_COLON expr PUNC_RBRACE

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_COLON2    shift, and go to state 8
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    expr        go to state 97
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 53

   14 expr: expr • OPER_PLUS expr
   15     | expr • OPER_MINUS expr
   16     | expr • OPER_MUL expr
   17     | expr • OPER_DIV expr
   18     | expr • OPER_MOD expr
   61 elist: expr • elistrep

    OPER_PLUS   shift, and go to state 72
    OPER_MINUS  shift, and go to state 73
    OPER_MUL    shift, and go to state 74
    OPER_DIV    shift, and go to state 75
    OPER_MOD    shift, and go to state 76
    PUNC_COMMA  shift, and go to state 98

    $default  reduce using rule 60 (elistrep)

    elistrep  go to state 99


State 54

   63 objectin: elist •

    $default  reduce using rule 63 (objectin)


State 55

   65 objectdef: PUNC_LBRACKET objectin • PUNC_RBRACKET

    PUNC_RBRACKET  shift, and go to state 100


State 56

   64 objectin: indexed •

    $default  reduce using rule 64 (objectin)


State 57

   66 indexed: indexedelem • indexrep

    PUNC_COMMA  shift, and go to state 101

    $default  reduce using rule 69 (indexrep)

    indexrep  go to state 102


State 58

   14 expr: expr • OPER_PLUS expr
   15     | expr • OPER_MINUS expr
   16     | expr • OPER_MUL expr
   17     | expr • OPER_DIV expr
   18     | expr • OPER_MOD expr
   31 term: PUNC_LPARENTH expr • PUNC_RPARENTH

    OPER_PLUS      shift, and go to state 72
    OPER_MINUS     shift, and go to state 73
    OPER_MUL       shift, and go to state 74
    OPER_DIV       shift, and go to state 75
    OPER_MOD       shift, and go to state 76
    PUNC_RPARENTH  shift, and go to state 103


State 59

   42 primary: PUNC_LPARENTH funcdef • PUNC_RPARENTH
   54 call: PUNC_LPARENTH funcdef • PUNC_RPARENTH PUNC_LPARENTH elist PUNC_RPARENTH

    PUNC_RPARENTH  shift, and go to state 104


State 60

   46 lvalue: PUNC_COLON2 ID •

    $default  reduce using rule 46 (lvalue)


State 61

   92 ifprefix: KEYW_IF PUNC_LPARENTH • boolexpr PUNC_RPARENTH

    OPER_MINUS     shift, and go to state 1
    OPER_PLUS2     shift, and go to state 2
    OPER_MINUS2    shift, and go to state 3
    PUNC_LBRACKET  shift, and go to state 5
    PUNC_LPARENTH  shift, and go to state 6
    PUNC_COLON2    shift, and go to state 8
    KEYW_NOT       shift, and go to state 105
    KEYW_LOCAL     shift, and go to state 16
    KEYW_TRUE      shift, and go to state 17
    KEYW_FALSE     shift, and go to state 18
    KEYW_NIL       shift, and go to state 19
    CONST_INT      shift, and go to state 20
    CONST_REAL     shift, and go to state 21
    ID             shift, and go to state 22
    STRING         shift, and go to state 23

    expr        go to state 106
    boolexpr    go to state 107
    term        go to state 28
    assignexpr  go to state 29
    primary     go to state 30
    lvalue      go to state 31
    member      go to state 32
    call        go to state 33
    objectdef   go to state 34
    const       go to state 39


State 62

  102 forprefix: KEYW_FOR loopstart • PUNC_LPARENTH elist savepos PUNC_SEMIC boolexpr PUNC_SEMIC

    PUNC_LPARENTH  shift, and go to state 108


State 63

   74 funcname: ID •

    $default  reduce using rule 74 (funcname)


State 64

   76 funcprefix: KEYW_FUNC funcname •

    $default  reduce using rule 76 (funcprefix)


State 65

  104 returnstmt: KEYW_RET PUNC_SEMIC •

    $default  reduce using rule 104 (returnstmt)


State 66

   14 expr: expr • OPER_PLUS expr
   15     | expr • OPER_MINUS expr
   16     | expr • OPER_MUL expr
   17     | expr • OPER_DIV expr
   18     | expr • OPER_MOD expr
  105 returnstmt: KEYW_RET expr • PUNC_SEMIC

    OPER_PLUS   shift, and go to state 72
    OPER_MINUS  shift, and go to state 73
    OPER_MUL    shift, and go to state 74
    OPER_DIV    shift, and go to state 75
    OPER_MOD    shift, and go to state 76
    PUNC_SEMIC  shift, and go to state 109


State 67

    9 stmt: KEYW_BREAK PUNC_SEMIC •

    $default  reduce using rule 9 (stmt)


State 68

   10 stmt: KEYW_CONT PUNC_SEMIC •

    $default  reduce using rule 10 (stmt)


State 69

   45 lvalue: KEYW_LOCAL ID •

    $default  reduce using rule 45 (lvalue)


State 70

    0 $accept: program $end •

    $default  accept


State 71

    2 statements: stmt statements •

    $default  reduce using rule 2 (statements)


State 72
